--- a/Tema_1/bucles/ejercicio6/formulario.html
+++ b/Tema_1/bucles/ejercicio6/formulario.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <form action="tabla.php" method="get">
-      <input type="number" name="x" id="" />
-      <input type="number" name="y" id="" />
-
+      numero de Filas<input type="number" name="nFilas" id="" /> numero de
+      columnas<input type="number" name="nColumnas" id="" />
       <button type="submit">Enviar</button>
     </form>
   </body>
